# remem

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  baselines.py  benchmark-plan.md  embeddings.py  io.py  model.py  recommendations.md  report.py  run.py  system.py
benchmarks/configs/: banking77-test-multi-signal-exact.json  banking77-test-selected-exact.json  banking77-test-selected-hnsw.json  banking77-test-similarity-only-exact.json  banking77-validation-exact.json  banking77-validation-hnsw.json  beir-scifact-test-multi-signal-exact.json  beir-scifact-test-similarity-only-exact.json  paws-scale-exact-n100.json  paws-scale-exact-n1000.json  paws-scale-exact-n8000.json  paws-scale-hnsw-n100.json  paws-scale-hnsw-n1000.json  paws-scale-hnsw-n8000-persistent.json  paws-test-multi-signal-exact-n1000.json  paws-test-selected-exact-n1000.json  paws-test-selected-hnsw-n1000.json  paws-test-similarity-only-exact-n1000.json  paws-validation-exact-n1000.json  paws-validation-hnsw-c10-ef10-n1000.json  paws-validation-hnsw-c10-ef100-n1000.json  paws-validation-hnsw-c10-ef50-n1000.json  paws-validation-hnsw-n1000.json  real-quality-template.json  smoke-auto.json  smoke-exact.json  squad-test-multi-signal-exact-n1000.json  squad-test-selected-exact-n1000.json  squad-test-selected-hnsw-n1000.json  squad-test-similarity-only-exact-n1000.json  squad-validation-exact-n1000.json  squad-validation-hnsw-n1000.json
benchmarks/datasets/: __init__.py  download.py  preprocess.py
benchmarks/datasets/manifests/: banking77.json  beir_scifact.json  paws_wiki.json  squad_v1.json
benchmarks/fixtures/: tiny-workload.json
benchmarks/metrics/: __init__.py  quality.py
benchmarks/reports/: failure-examples.json  report.md  summary.csv  summary.json
benchmarks/tests/: test_framework.py
docs/: QuickStart.md  api.md  architecture.md  benchmarks.md  faq.md  getting-started.md  migration-1.1.md  roadmap.md  troubleshooting.md
examples/: basic_demo.py  persistent_storage.py  policy_demo.py  rag_reuse.py
remem/: __init__.py  client.py
remem/distributed/: storage.py
remem/metrics/: collector.py  events.py  snapshot.py
remem/models/: execution_context.py  execution_record.py  execution_result.py
remem/reuse/: decision.py  engine.py  matcher.py  policy.py
remem/similarity/: __init__.py  engine.py  index.py  metrics.py  mode.py
remem/storage/: exceptions.py  in_memory_storage.py  json_storage.py  memory_storage.py  serializer.py  snapshot.py  storage.py
server/: main.py
server/remem/cache/: remem.py
server/remem/models/: retrieval_entry.py
server/remem/similarity/: engine.py  metrics.py
server/remem/storage/: in_memory_storage.py  storage.py
server/tests/: test_in_memory_storage.py  test_metrics.py  test_similarity_engine.py
tests/: test_ann.py  test_ann_filtering.py  test_ann_persistence.py  test_client.py  test_context.py  test_direct_lookup.py  test_distributed.py  test_execution_models.py  test_matcher.py  test_models.py  test_multi_signal_policy.py  test_persistence.py  test_policy.py  test_reuse_planner.py  test_similarity.py  test_similarity_engine.py  test_storage.py
