[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remem-ai"
dynamic = ["version"]
description = "An AI Work Reuse Engine — remember expensive AI work and reuse it intelligently."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Harshvardhan Singh" }]
keywords = [
    "ai",
    "llm",
    "rag",
    "cache",
    "semantic-cache",
    "embeddings",
    "reuse",
    "agents",
    "vector",
    "infrastructure",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/harshvardhansingh7/remem"
Repository = "https://github.com/harshvardhansingh7/remem"
Issues = "https://github.com/harshvardhansingh7/remem/issues"

[tool.setuptools.dynamic]
version = { attr = "remem.__version__" }

[tool.setuptools.packages.find]
include = ["remem*"]

[tool.setuptools.package-data]
remem = ["py.typed"]

[tool.ruff]
# Target version matching python environment
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E8", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect appropriate line endings.
line-ending = "auto"

[tool.pytest.ini_options]
# Correct path configuration for pytest
pythonpath = ["."]
